--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "tap-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "scripts": { "start": "node server.js" },
+  "engines": { "node": ">=18" },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "whatsapp-web.js": "^1.25.0",
+    "qrcode": "^1.5.3"
   }
 }
